<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DashboardActivity">

    <TextView
        android:id="@+id/postTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        android:text="@string/api_fetch_application"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/apiCallBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:text="@string/make_api_call" />

    <!--    <TextView-->
    <!--        android:id="@+id/apiResponseTV"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="50dp"-->
    <!--        android:hint="@string/api_result_here"-->
    <!--        android:padding="20dp"-->
    <!--        android:textSize="24sp" />-->

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dashBoardRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#4439DC"
        android:padding="20dp"
        android:text="@string/login"
        android:textSize="24sp" />
</androidx.appcompat.widget.LinearLayoutCompat>